# claude-litter

./: .gitignore  CLAUDE.md  DOCS_PROGRESS.md  DOCS_SUMMARY.md  DOCUMENTATION_DRAFT.md  README.md  findings-minified-hooks.md  findings-raw-source-hooks.md  main.py  pyproject.toml
.claude-plugin/: marketplace.json
.claude/batch-prompts/: build-litter-tui-agent-team-manager.md
.github/workflows/: ci.yml  release.yml  version-badge.yml
plugins/claude-swarm/: README.md
plugins/claude-swarm/.claude-plugin/: plugin.json
plugins/claude-swarm/agents/: swarm-coordinator.md
plugins/claude-swarm/commands/: swarm-approve-join.md  swarm-broadcast.md  swarm-cleanup.md  swarm-color.md  swarm-consult.md  swarm-create.md  swarm-diagnose.md  swarm-discover.md  swarm-guide.md  swarm-inbox.md  swarm-join.md  swarm-list-teams.md  swarm-message.md  swarm-onboard.md  swarm-reconcile.md  swarm-reject-join.md  swarm-request-shutdown.md  swarm-resume.md  swarm-send-text.md  swarm-session.md  swarm-spawn.md  swarm-status.md  swarm-verify.md  swarm-webhooks.md  task-create.md  task-delete.md  task-list.md  task-update.md
plugins/claude-swarm/docs/: COMMANDS.md  HOOKS.md  INTEGRATION.md  SWARM_TEAMMATE_PROMPT_INTEGRATION.md  VALIDATION_REPORT_3SKILL_ARCHITECTURE.md
plugins/claude-swarm/hooks/: exit-plan-swarm.sh  hooks.json  notification-heartbeat.sh  session-start.sh  session-stop.sh  subagent-start-context.sh  task-completed.sh  task-team-context.sh  teammate-idle.sh
plugins/claude-swarm/lib/: swarm-onboarding.sh  swarm-utils.sh
plugins/deepwork/: CLAUDE.md  README.md
plugins/deepwork/.claude-plugin/: plugin.json
plugins/deepwork/hooks/: approve-archive.sh  batch-gate.sh  critique-version-gate.sh  deliver-gate.sh  frontmatter-gate.sh  halt-gate.sh  hooks.json  incident-detector.sh  integrity-always-gate.sh  phase-advance-gate.sh  pre-compact.sh  session-context.sh  stale-warn.sh  state-bash-gate.sh  state-drift-marker.sh  status-claim-regex-precheck.sh  task-completed-gate.sh  teammate-idle-gate.sh  verdict-version-gate.sh  (+3 more)
plugins/swarm-loop/: README.md
plugins/team-overlord/: .mcp.json
src/claude_litter/: __init__.py  __main__.py  app.py  config.py  utils.py
src/litter_tui/: __init__.py  __main__.py  app.py  config.py
tests/: conftest.py  deepwork-drift-prevention.sh  test_agent_manager.py  test_app.py  test_claude_settings.py  test_context_builders.py  test_format_inbox.py  test_main_screen.py  test_mcp_tools.py  test_models.py  test_scaffold.py  test_screens.py  test_services.py  test_settings_helpers.py  test_sidebar_swarm.py  test_state.py  test_state_parse.py  test_status_bar_swarm.py  test_swarm_models.py  test_swarm_panel.py  test_task_graph.py  test_transcript.py  test_widgets_group1.py  test_widgets_group2.py  test_widgets_group3.py
(+262 files in other folders)
