[project]
name = "litter-tui"
version = "0.1.0"
description = "A TUI for managing Claude Agent Teams"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=3.0",
    "claude-agent-sdk",
    "anyio",
    "watchfiles",
]
authors = [
    {name = "Und3rf10w"}
]
maintainers = [
    {name = "Und3rf10w"}
]
keywords = ["claude", "claude code", "agent teams", "agent swarms", "swarms"]

[project.urls]
Repository = "https://github.com/Und3rf10w/claude-litter"

[project.scripts]
litter-tui = "litter_tui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/litter_tui"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-anyio",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
