[project]
name = "claude-litter"
version = "0.1.0"
description = "A TUI for managing Claude Agent Teams"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=3.0",
    "claude-agent-sdk",
    "anyio",
    "watchfiles",
]
authors = [
    {name = "Und3rf10w"}
]
maintainers = [
    {name = "Und3rf10w"}
]
keywords = ["claude", "claude code", "agent teams", "agent swarms", "swarms"]

[project.urls]
Repository = "https://github.com/Und3rf10w/claude-litter"

[project.scripts]
claude-litter = "claude_litter.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_litter"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-anyio",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py314"
extend-exclude = ["plugins"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F841"]

[tool.ruff.format]
quote-style = "double"
